Update style and Move context to left section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Free Button Builder</title>
+    <meta
+      name="description"
+      content="100% Free & Unlimited: No hidden fees, no downloads, and no limits on the number of designs you can create. It's the ultimate free button maker for everyone."
+    />
+    <meta name="keywords" content="Free Button Builder, Button Builder, Button Generator" />
+    <meta name="author" content="Juan Sanchez" />
+    <meta name="robots" content="index, follow" />
+
+    <title>Free Button Maker: Online Tool to Create Custom Buttons</title>
   </head>
   <body>
     <div id="root"></div>
