--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="100% Free & Unlimited: No hidden fees, no downloads, and no limits on the number of designs you can create. It's the ultimate free button maker for everyone."
+      content="100% Free & Unlimited: No hidden fees, no downloads, and no limits on the number of designs you can create. It's the ultimate free button builder for everyone."
     />
     <meta name="keywords" content="Free Button Builder, Button Builder, Button Generator" />
     <meta name="author" content="Juan Sanchez" />
     <meta name="robots" content="index, follow" />
 
-    <title>Free Button Maker: Online Tool to Create Custom Buttons</title>
+    <title>Free Button Builder: Online Tool to Create Custom Buttons</title>
   </head>
   <body>
     <div id="root"></div>
